# autoresearch-jetson

./: DISCUSSION_POST.md  README.md  prepare.py  program.md  pyproject.toml  results.tsv  train.py
